css/landing.css
@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Crimson+Text|Karla:400i&display=swap');
@import url('https://fonts.googleapis.com/css?family=Crete+Round|Pacifico|Quicksand&display=swap');
@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
@import url('https://fonts.googleapis.com/css?family=Fruktur|Josefin+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Poiret+One|Titillium+Web&display=swap')
html
{
  scroll-behavior: smooth;
}
::-moz-selection {
  background: #000;
  color: #fff; }

::selection {
  background: #000;
  color: #fff; }

a {
  -webkit-transition: .3s all ease;
  -o-transition: .3s all ease;
  transition: .3s all ease; }
  a:hover {
    text-decoration: none; 
  }

h1, h2, h3, h4, h5,
.h1, .h2, .h3, .h4, .h5 {
  /*font-family: "Noto Sans", sans-serif;*/
  font-family: 'Bebas Neue', !important;
font-weight: bold;
  }
p,a
{
  /*font-family: "Noto Sans", sans-serif!important;*/
  font-family: 'Bebas Neue',!important;
}
.text-style{
  color:white;
  font-size:30px;
  margin-left: 175%;

}
@media screen and (max-width: 768px){
  .text-style{
    font-size:18px;
  }
}
*, *::before, *::after {
  box-sizing: border-box;
}
.topbar{
	top: 0;
	position: fixed;
	z-index: 1000;
}
.everythingexcepttopbar{
	margin-top: 10vh;
}
.container-style{
    width: 100%;
display: grid;
grid-template-columns: 0.5fr 1.3fr 3fr;
grid-template-rows: 100px;
justify-content: center;
align-items: center;
z-index: 100;
background:rgba(35, 66, 113, 1);
box-shadow: 10px 10px 30px rgba(0,0,0,0.50);
margin-top: -2px;
}
.navbar-list{
    display: flex;
    justify-content: space-between;
  }
  .navbar-list{
    list-style: none;
  }
  .navbar-list a{
    color:white;
    text-decoration: none;
    outline:none;
    font-size: 16px;
    font-weight: bolder;
    letter-spacing: 1.3px;
    padding-right:30px;
  }
/*  .navbar-list a:hover{
    border-bottom:2px solid lightblue;
    border-top:2px solid lightblue;
    transition: all 0.3s ease-in-out;
  }*/
  .tagline .tagline-style{
    display: block;
    font-weight: bolder;
    font-size: 19px;
    line-height: 1.2;
    letter-spacing: 1.1px;
    color:white;
    word-spacing: 1.3px;
  }
  .tagline .tagline-base{
    color:white;
    display: block;
    font-weight: bolder;
    font-size: 17px;
    line-height: 1.2;
    letter-spacing: 1.2px;
    word-spacing: 1.2px;
  }
  @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
body {
  margin: 0;
  padding:0;
  font-weight: 400;
  overflow-x:hidden;
  background-size: cover;
  background-repeat: no-repeat;
  scroll-behavior:smooth;
}
@media screen and (min-width:769px){
  .contact-style{
    padding-right:40px;
  }
}
@media screen and (max-width:768px){
body
{
  overflow-x:hidden;
}
  .line1{
    width:30px;
    height:3px;
    background:white;
    margin:5px;

  }
  nav{
    position:relative;
    right:5%;
  }
  .hamburger{
    position:absolute;
    top:50%;
    transform: translate(-5%,-50%);
    cursor:pointer;
    right:0;
    z-index : 2 ;
  }
  .navbar-list{
    overflow-x: hidden;
    position: absolute;
   background: rgba(35, 66, 113, 0.9);
    background-size: cover;
    height: 50vh;
    width:110%;
    top:10vh;
    right: -7vh;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    clip-path: circle(100px at 90% -32%);
    -webkit-clip-path:circle(100px at 90% -32%);
    transition : all 1s ease-out;
    z-index:2;
  }
  .navbar-list.open{
    z-index: 1000;
    opacity: 90%;
    clip-path: circle(1050px at 90% -20%);
    -webkit-clip-path:circle(1050px at 90% -20%);
    z-index: 1000;
  }
  .tagline{
    display:none;
  }
  .container-style{
    width:105%;
    position: initial;
  }
  .contact-style{
    padding-right: 0;
  }
  .brand{
    position: relative;
    margin-left: 5vw;
  }
}
.underline-opening:after,
.underline-opening:before{
    position:absolute;
    z-index:100;
}
.underline-opening:after {
    content: "";
    width: 3px;
    height: 3px;
    bottom: 0;
    left: 0;
    right: 0;
    margin: -10px auto;
}

.underline-opening:focus:after,
.underline-opening:hover:after {
    width: 100%;
    height: 3px;
    margin-right:10px;
}

.underline-opening:before {
    content: "";
    width: 3px;
    height: 3px;
    bottom: 0;
    right: 0;
    left: 0;
    margin: -10px auto;
}

.underline-opening:focus:before,
.underline-opening:hover:before {
    width: 100%;
    height: 3px;
   margin-right:10px;
}
.navbar-list a {
    position: relative;
    z-index: 50;
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;
    overflow: hidden
}
.navbar-list a {
    -webkit-transition: color 1s ease;
    -moz-transition: color 1s  ease;
    -ms-transition: color 1s ease;
    -o-transition: color 1s ease;
    cursor: pointer
}
.navbar-list a {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    transition: color 1s ease
}

.navbar-list a:focus,
.navbar-list a:hover {
    outline: 0;
    /*color: #1B98E0;*/
    -webkit-transition: color 1s ease;
    -moz-transition: color 1s ease;
    -ms-transition: color 1s ease;
    -o-transition: color 1s ease;
    transition: color 1s ease;
    cursor: pointer
}

.navbar-list a:after,
.navbar-list a:before {
    -webkit-transition: all 1s ease 0s;
    -moz-transition: all 1s ease 0s;
    -ms-transition: all 1s ease 0s;
    -o-transition: all 1s ease 0s;
    transition: all 1s ease 0s
}
/* ... */

